<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".peoplelist.PeopleActivity">

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_search_24dp"
          android:orderInCategory="0"
          android:title="@string/action_search"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_filter"
          android:icon="@drawable/ic_filter_list_24dp"
          android:orderInCategory="1"
          android:title="@string/action_filter"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_reload"
          android:icon="@drawable/ic_autorenew_24dp"
          android:orderInCategory="1"
          android:title="@string/action_reload"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="never"/>
</menu>
