<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".peoplelist.PeopleFragment">

    <LinearLayout
        android:id="@+id/people_list_data_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/people_list_filter_label"
                android:text="@string/filter_label"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/platform_filter_spinner"
                android:prompt="@string/platform_filter_title"
                android:spinnerMode="dialog"
                android:layout_marginLeft="@dimen/filter_spinner_left_margin"
                android:layout_marginStart="@dimen/filter_spinner_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/location_filter_spinner"
                android:prompt="@string/location_filter_title"
                android:spinnerMode="dialog"
                android:layout_marginLeft="@dimen/filter_spinner_left_margin"
                android:layout_marginStart="@dimen/filter_spinner_left_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/people_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/people_list_progress_bar"
        android:layout_gravity="center"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/people_list_data_not_available"
        android:layout_gravity="center"
        android:text="@string/data_not_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</FrameLayout>
